# melange-latest-esy-template

./: .gitignore  README.md  dune  esy.json  package-lock.json  package.json  webpack.config.js
esy.lock/: index.json
src/: app.re  dune
