(dirs src node_modules)

(subdir
 node_modules
 (vendored_dirs @rescript)
 (dirs @rescript)
 (subdir
  @rescript
  (vendored_dirs react)
  (dirs react)
  (subdir
   react
   (vendored_dirs src)
   (dirs src)
   (subdir
    src
    (include_subdirs unqualified)
    (library
     (name rescript_react)
     (wrapped false)
     (flags :standard -bs-jsx 3)
     (modes melange))))))
