; This file is used to add dune `library` inside node_modules/@rescript/react/src so dune is aware of `rescript_react` and can be used as libraries
(dirs src node_modules) ; Without the above part, dirs should only contain `src`.

(subdir
 node_modules
 (vendored_dirs @rescript)
 (dirs @rescript)
 (subdir
  @rescript
  (vendored_dirs react)
  (dirs react)
  (subdir
   react
   (vendored_dirs src)
   (dirs src)
   (subdir
    src
    (include_subdirs unqualified)
    (library
     (name rescript_react)
     (wrapped false)
     (flags :standard -bs-jsx 3)
     (modes melange))))))
